<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ghost Hunter Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome! In this game you must kill a certain amount of ghosts within a certain amount of time; but, there\'s a catch. Your character can only kill a ghost that shares its color. You can change your color by walking over the colored tiles on the map.
<![CDATA[ <b><font color=#ff0000>write</b> your <b><font color=#0000ff>text</b> here .

]]>
    </string>
    <string name="play">PLAY</string>
    <string name="sound">SOUND ON/OFF</string>
    <string name="name">name</string>
    <string name="header">CS2110 Ghost Hunter Project, Fall 2014</string>
    <string name="team">Team Members</string>
    <string name="bomb_button">Bomb</string>
    <string name="immortality_button">Invulnerability</string>
    <string name="speed_button">Speed Boost</string>
    <string name="barrier_button">Barrier</string>

</resources>